made grid slightly smaller to avoid scroll coming up on text wrap when enemy leaves game

--- a/styles.css
+++ b/styles.css
@@ -247,8 +247,8 @@ table {
 td {
     border: 3.5px solid #000;
     font-size: 4.5rem;
-    width: 10vw;
-    height: 10vw;
+    width: 9vw;
+    height: 9vw;
 }
 
 td:hover {
